# game_programming_in_cpp_practice

./: .editorconfig
chapter_1/: .clang-format-ignore  .clang-tidy  .clang-tidy-ignore  .gitignore  .gitmodules  conanfile.txt
chapter_1/.github/workflows/: ci.yml
chapter_1/app/: main.cpp
chapter_1/src/: CMakeLists.txt  drawer.cpp  drawer.hpp  game.cpp  game.hpp  game_lib.hpp  object.cpp  object.hpp  player.cpp  player.hpp  random.cpp  random.hpp  wall.cpp  wall.hpp
chapter_1/test/: random_test.cpp
chapter_2/: .clang-format  .clang-tidy  CMakeLists.txt  CPPLINT.cfg  Doxyfile  Makefile  class-diagram.puml  conanfile.txt  readme.md
chapter_2/.github/workflows/: docker-image.yml  doxy-doc.yml
chapter_2/app/: CMakeLists.txt  main.cpp
chapter_2/cmake/: build_doxygen.cmake  fetch_googletest.cmake  fetch_sdl.cmake
chapter_2/src/: CMakeLists.txt  actor.cpp  actor.hpp  component.cpp  component.hpp  di_component.hpp  game.cpp  game.hpp  game_lib.hpp  math.hpp
chapter_2/test/: CMakeLists.txt  main.cpp
